--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <div class="modal-content">
       <div class="modal-header" id="place1">
         <h4 class="modal-title" id="myModalLabel">Order Here!!</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
